--- a/wofi/.config/wofi/style.css
+++ b/wofi/.config/wofi/style.css
@@ -1,26 +1,26 @@
 window {
 margin: 0px;
-border: 1px solid #7A8478;
-background-color: #1E2326;
+border: 1px solid #928374;
+background-color: #282828;
 }
 
 #input {
 margin: 5px;
 border: none;
-color: #D3C6AA;
-background-color: #272E33;
+color: #ebdbb2;
+background-color: #1d2021;
 }
 
 #inner-box {
 margin: 5px;
 border: none;
-background-color: #1E2326;
+background-color: #282828;
 }
 
 #outer-box {
 margin: 5px;
 border: none;
-background-color: #1E2326;
+background-color: #282828;
 }
 
 #scroll {
@@ -31,9 +31,9 @@ border: none;
 #text {
 margin: 5px;
 border: none;
-color: #D3C6AA;
+color: #ebdbb2;
 }
 
 #entry:selected {
-background-color: #272E33;
+background-color: #1d2021;
 }
